--- a/PopularMovies/app/src/main/res/layout/activity_movie_details.xml
+++ b/PopularMovies/app/src/main/res/layout/activity_movie_details.xml
@@ -9,7 +9,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:context="com.example.pranaykumar.popularmovies.MovieDetails"
+    tools:context="com.example.pranaykumar.popularmovies.MovieDetailsActivity"
     >
 
 
@@ -229,13 +229,13 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="8dp"
+      android:layout_marginStart="8dp"
+      android:layout_marginEnd="8dp"
       android:layout_marginLeft="8dp"
       android:background="@android:color/background_light"
       app:layout_constraintLeft_toLeftOf="@+id/ratingTextView"
       app:layout_constraintTop_toBottomOf="@+id/ratingTextView"
-      app:srcCompat="@drawable/ic_stars_black_36dp"
-      android:layout_marginStart="8dp"
-      android:layout_marginEnd="8dp"/>
+      app:srcCompat="@drawable/ic_favorite_border_red_400_36dp"/>
 
 
   </android.support.constraint.ConstraintLayout>
