--- a/PopularMovies/app/src/main/res/layout/activity_movie_details.xml
+++ b/PopularMovies/app/src/main/res/layout/activity_movie_details.xml
@@ -2,8 +2,9 @@
 <ScrollView
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
-  xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent"
-  android:layout_width="match_parent">
+  xmlns:tools="http://schemas.android.com/tools"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent">
   <android.support.constraint.ConstraintLayout
 
     android:layout_width="match_parent"
@@ -45,31 +46,31 @@
       android:id="@+id/posterImageView"
       android:layout_width="160dp"
       android:layout_height="200dp"
-      tools:layout_conversion_absoluteX="16dp"
-      tools:layout_conversion_absoluteY="100dp"
-      tools:layout_conversion_absoluteWidth="160dp"
-      tools:layout_conversion_absoluteHeight="200dp"
+      android:layout_marginTop="16dp"
+      android:layout_marginStart="8dp"
       android:layout_marginLeft="8dp"
       app:layout_constraintLeft_toLeftOf="@+id/titleTextView"
-      android:layout_marginTop="16dp"
       app:layout_constraintTop_toBottomOf="@+id/titleTextView"
-      android:layout_marginStart="8dp"></ImageView>
+      tools:layout_conversion_absoluteHeight="200dp"
+      tools:layout_conversion_absoluteWidth="160dp"
+      tools:layout_conversion_absoluteX="16dp"
+      tools:layout_conversion_absoluteY="100dp"></ImageView>
 
     <TextView
       android:id="@+id/dateTextView"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:layout_marginTop="8dp"
+      android:layout_marginStart="16dp"
+      android:layout_marginLeft="16dp"
       android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-      tools:text="2016"
+      app:layout_constraintLeft_toRightOf="@+id/posterImageView"
+      app:layout_constraintTop_toTopOf="@+id/posterImageView"
+      tools:layout_conversion_absoluteHeight="26dp"
+      tools:layout_conversion_absoluteWidth="50dp"
       tools:layout_conversion_absoluteX="192dp"
       tools:layout_conversion_absoluteY="116dp"
-      tools:layout_conversion_absoluteWidth="50dp"
-      tools:layout_conversion_absoluteHeight="26dp"
-      app:layout_constraintLeft_toRightOf="@+id/posterImageView"
-      android:layout_marginLeft="16dp"
-      app:layout_constraintTop_toTopOf="@+id/posterImageView"
-      android:layout_marginTop="8dp"
-      android:layout_marginStart="16dp"/>
+      tools:text="2016"/>
 
     <TextView
       android:id="@+id/ratingTextView"
@@ -92,15 +93,15 @@
       android:id="@+id/overviewTextView"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
+      android:layout_marginTop="16dp"
       android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-      tools:text="This is the overView of the movie"
+      app:layout_constraintLeft_toLeftOf="@+id/posterImageView"
+      app:layout_constraintTop_toBottomOf="@+id/posterImageView"
+      tools:layout_conversion_absoluteHeight="26dp"
+      tools:layout_conversion_absoluteWidth="384dp"
       tools:layout_conversion_absoluteX="0dp"
       tools:layout_conversion_absoluteY="316dp"
-      tools:layout_conversion_absoluteWidth="384dp"
-      tools:layout_conversion_absoluteHeight="26dp"
-      app:layout_constraintLeft_toLeftOf="@+id/posterImageView"
-      android:layout_marginTop="16dp"
-      app:layout_constraintTop_toBottomOf="@+id/posterImageView"/>
+      tools:text="This is the overView of the movie"/>
     <ImageView
       android:id="@+id/GuideLine1"
       android:layout_width="0dp"
@@ -168,11 +169,11 @@
       android:layout_marginEnd="8dp"
       android:layout_marginLeft="8dp"
       android:layout_marginRight="8dp"
+      app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/textViewTrailer2"
-      app:srcCompat="@android:color/darker_gray"
-      app:layout_constraintHorizontal_bias="0.0"/>
+      app:srcCompat="@android:color/darker_gray"/>
     <TextView
       android:id="@+id/text_view_reviews"
       android:layout_width="0dp"
@@ -205,15 +206,15 @@
       android:layout_width="0dp"
       android:layout_height="2dp"
       android:layout_marginTop="32dp"
+      android:layout_marginStart="8dp"
+      android:layout_marginEnd="8dp"
       android:layout_marginLeft="8dp"
       android:layout_marginRight="8dp"
+      app:layout_constraintHorizontal_bias="1.0"
       app:layout_constraintLeft_toLeftOf="@+id/GuideLine1"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/textViewTrailer1"
-      app:srcCompat="@android:color/darker_gray"
-      app:layout_constraintHorizontal_bias="1.0"
-      android:layout_marginStart="8dp"
-      android:layout_marginEnd="8dp"/>
+      app:srcCompat="@android:color/darker_gray"/>
     <TextView
       android:id="@+id/reviewsLabel"
       android:layout_width="wrap_content"
