--- a/PopularMovies/app/src/main/res/layout/grid_item.xml
+++ b/PopularMovies/app/src/main/res/layout/grid_item.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/layout">
+  android:id="@+id/layout"
+  android:layout_width="match_parent"
+  android:layout_height="wrap_content"
+  android:orientation="vertical">
   <ImageView
-      android:id="@+id/poster"
-      android:layout_width="200dp"
-      android:layout_height="200dp"
-      android:scaleType="centerCrop"
-      />
+    android:id="@+id/poster"
+    android:layout_width="match_parent"
+    android:layout_height="300dp"
+    android:adjustViewBounds="true"
+    android:scaleType="centerCrop"
+    />
 </LinearLayout>
